--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require font-awesome
+ *= require bootstrap
+ *= require bootstrap-theme
+ *= require bootstrap-select
+ *= require bootstrap-datepicker
  *= require_self
  *= require_tree .
  */
+
+
