--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,3 +1,78 @@
-.topnav
- =link_to (fa_icon "home"), root_url
- %a#trigger.menu-trigger{:href => "#"}= fa_icon "reorder", text: ""
+%nav.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+  .container-fluid
+    / Brand and toggle get grouped for better mobile display
+    .navbar-header
+      %button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      %a.navbar-brand{:href => "#"} &Eacute;ta&iacute;n
+    / Collect the nav links, forms, and other content for toggling
+    #bs-example-navbar-collapse-1.collapse.navbar-collapse
+      %ul.nav.navbar-nav{style: "padding-top:10px; margin-left:100px;"}
+        %li.dropdown
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            Courses
+            %b.caret
+          %ul.dropdown-menu
+            %li
+              %a{:href => "#"} Course Details
+            %li
+              %a{:href => "#"} Scheduling
+            %li
+              %a{:href => "#"} Bookings
+            %li
+              %a{:href => "#"} Facilities
+            %li
+              %a{:href => "#"} Course Blog
+        %li.dropdown
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            People
+            %b.caret
+          %ul.dropdown-menu
+            %li
+              %a{:href => "#"} Lecturers
+            %li
+              %a{:href => "#"} Customers
+            %li
+              %a{:href => "#"} Client Companies
+
+        %li.dropdown
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            Facilities
+            %b.caret
+          %ul.dropdown-menu
+            %li
+              %a{:href => "#"} Locations
+            %li
+              %a{:href => "#"} Assets
+        %li.dropdown
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            Reports
+            %b.caret
+          %ul.dropdown-menu
+            %li
+              %a{:href => "#"} Attendance
+            %li
+              %a{:href => "#"} Resume Generator
+            %li
+              %a{:href => "#"} Assets
+        %li
+          %a{:href => "#"} Payment
+          
+      %ul.nav.navbar-nav.navbar-right
+        %li.dropdown{style: "padding-top:10px; padding-right:60px;"}
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            Account
+            %b.caret
+          %ul.dropdown-menu
+            %li
+              %a{:href => "#"} Logout
+            %li
+              %a{:href => "#"} Update Details
+            %li
+              %a{:href => "#"} Change Password
+
+
+
