--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,11 +1,9 @@
 %footer.footer
   %small
-    &copy; 2003-#{Time.now.year} Teknik Padu Sdn Bhd
-    %a{:href => "http://railstutorial.org/"} Rails Tutorial
-    by Michael Hartl
+    &copy; 2003-#{Time.now.year} Yaacob Noor for Teknik Padu Sdn Bhd
   %nav
     %ul
       %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
       %li
-        %a{:href => "http://news.railstutorial.org/"} News
+        %a{:href => "http://teknikpadu.com.my"} News
