bootstrap and select

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -38,7 +38,7 @@
         %td= course.user_id
         %td= course.college_id
         %td= course.data
-        = render :partial => 'action_menu', :locals => { :lecturer => lecturer }
+        = render :partial => 'action_menu', :locals => { :course => course }
 
 
 
