--- a/app/views/bookings/index.html.haml
+++ b/app/views/bookings/index.html.haml
@@ -15,14 +15,14 @@
   %thead
     %tr
       %th= code
-      %th= Schedule 
-      %th= Customer 
-      %th= Payment 
-      %th= Warranty 
-      %th= Status 
-      %th= User 
-      %th= College 
-      %th= Data 
+      %th= schedule 
+      %th= customer 
+      %th= payment 
+      %th= warranty 
+      %th= status 
+      %th= user 
+      %th= college 
+      %th= data 
       %th 
   %tbody
     - @bookings.each do |booking|
