--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -14,10 +14,10 @@
   %thead
     %tr
       %th= Course
-      %th= Scheduled on
+      %th= Scheduled_on
       %th= Location
-      %th= Lecturer by
-      %th= Max people
+      %th= Lecturer_by
+      %th= Max_people
       %th= Status
       %th= User
       %th= College
