--- a/app/views/lecturers/index.html.haml
+++ b/app/views/lecturers/index.html.haml
@@ -14,7 +14,7 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th= Name
+      %th= name
       %th= Details
       %th= Rate
       %th= User
