isyad gets basic stuff wrong

--- a/app/views/bookings/index.html.haml
+++ b/app/views/bookings/index.html.haml
@@ -14,15 +14,15 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th= code
-      %th= schedule 
-      %th= customer 
-      %th= payment 
-      %th= warranty 
-      %th= status 
-      %th= user 
-      %th= college 
-      %th= data 
+      %th code
+      %th schedule 
+      %th customer 
+      %th payment 
+      %th warranty 
+      %th status 
+      %th user 
+      %th college 
+      %th data 
       %th 
   %tbody
     - @bookings.each do |booking|
