--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -13,15 +13,15 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th= company_code
-      %th= name
-      %th= address
-      %th= phone
-      %th= email
-      %th= fax
-      %th= user
-      %th= college
-      %th= data
+      %th company_code
+      %th name
+      %th address
+      %th phone
+      %th email
+      %th fax
+      %th user
+      %th college
+      %th data
       %th
   %tbody
     - @companies.each do |company|
