--- a/app/views/lecturers/index.html.haml
+++ b/app/views/lecturers/index.html.haml
@@ -14,12 +14,12 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th= name
-      %th= Details
-      %th= Rate
-      %th= User
-      %th= College
-      %th= Data
+      %th name
+      %th Details
+      %th Rate
+      %th User
+      %th College
+      %th Data
       %th
   %tbody
     - @lecturers.each do |lecturer|
