--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -13,15 +13,15 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th= Course
-      %th= Scheduled_on
-      %th= Location
-      %th= Lecturer_by
-      %th= Max_people
-      %th= Status
-      %th= User
-      %th= College
-      %th= Data
+      %th Course
+      %th Scheduled_on
+      %th Location
+      %th Lecturer_by
+      %th Max_people
+      %th Status
+      %th User
+      %th College
+      %th Data
       %th
   %tbody
     - @schedules.each do |schedule|
