--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -5,7 +5,7 @@
 
 
 .row
-  %li= link_to content_tag(:li, fa_icon(" ", text: (t 'actions.new'))), new_course_path
+  = link_to content_tag(:li, fa_icon(" ", text: (t 'actions.new'))), new_course_path
 
 .row
   %table.table.table-condensed.table-hover.table-striped
