--- a/app/views/bookings/index.html.haml
+++ b/app/views/bookings/index.html.haml
@@ -1,6 +1,7 @@
 - provide(:title, 'bookings')
 - model_class = Booking
 .page-header
+  %h1 Booking
 
 
 .navbar.navbar-inverse
@@ -14,15 +15,15 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th code
-      %th schedule 
-      %th customer 
-      %th payment 
-      %th warranty 
-      %th status 
-      %th user 
-      %th college 
-      %th data 
+      %th Code
+      %th Schedule 
+      %th Customer 
+      %th Payment 
+      %th Warranty 
+      %th Status 
+      %th User 
+      %th College 
+      %th Data 
       %th 
   %tbody
     - @bookings.each do |booking|
