--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -11,16 +11,16 @@
   %table.table.table-condensed.table-hover.table-striped
     %thead
       %tr
-        %th code
-        %th category
-        %th topic
-        %th description
-        %th fee
-        %th duration
-        %th duration_type
-        %th user
-        %th college
-        %th data
+        %th Code
+        %th Category
+        %th Topic
+        %th Description
+        %th Fee
+        %th Duration
+        %th Duration type
+        %th User
+        %th College
+        %th Data
         %th
     %tbody
       - @courses.each do |course|
