--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'schedules')
 - model_class = Schedule
 .page-header
-
+  %h1 Schedule
 
 .navbar.navbar-inverse
   .navbar-inner
@@ -14,10 +14,10 @@
   %thead
     %tr
       %th Course
-      %th Scheduled_on
+      %th Scheduled On
       %th Location
-      %th Lecturer_by
-      %th Max_people
+      %th Lecturer By
+      %th Max People
       %th Status
       %th User
       %th College
