--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,6 +1,7 @@
 - provide(:title, 'Company')
 - model_class = Company
 .page-header
+  %h1 Company
 
 
 .navbar.navbar-inverse
@@ -13,15 +14,15 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th company_code
-      %th name
-      %th address
-      %th phone
-      %th email
-      %th fax
-      %th user
-      %th college
-      %th data
+      %th Company Code
+      %th Name
+      %th Address
+      %th Phone
+      %th Email
+      %th Fax
+      %th User
+      %th College
+      %th Data
       %th
   %tbody
     - @companies.each do |company|
