--- a/app/views/lecturers/index.html.haml
+++ b/app/views/lecturers/index.html.haml
@@ -1,6 +1,7 @@
 - provide(:title, 'Lecturers')
 - model_class = Lecturer
 .page-header
+  %h1 Lecturer
 
 
 .navbar.navbar-inverse
@@ -14,7 +15,7 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th name
+      %th Name
       %th Details
       %th Rate
       %th User
