--- a/app/views/bookings/new.html.haml
+++ b/app/views/bookings/new.html.haml
@@ -2,6 +2,6 @@
 - provide(:title, 'New booking')
 - model_class = Booking
 .page-header
-  %h1= New booking
+  %h1 New booking
 = render :partial => 'form'
 
