--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -36,4 +36,4 @@
     .form-actions
       = f.submit (t 'helpers.links.submit'), :class => 'btn btn-primary'
       = link_to t('.cancel', :default => t("helpers.links.cancel")), |
-        company_path, :class => 'btn'
+        companies_path, :class => 'btn'
