Fix menu.css - rake aborted when recompile asset (production)

--- a/app/assets/stylesheets/menu.css
+++ b/app/assets/stylesheets/menu.css
@@ -16,9 +16,9 @@
 	/*background: #fff;*/
 	/*
 	box-shadow: 0 6px #34495e, 0 12px #fff, 0 18px #34495e, 0 24px #fff;
-		content: '';*/
+		content: '';
 	
-}
+}*/
 
 .mp-pusher {
 	position: relative;
