--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -181,9 +181,12 @@ input[type=checkbox] {width:13px; height:13px; *overflow: hidden; }
   }
 }
 
+/* temp added*/
+.control-group {z-index:9999;} /*top (layer)*/
+
 .field_with_errors {
   @extend .control-group;
-  @extend .error;
+  @extend .error !optional;
 }
 
 /* shows */
