--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,16 +7,16 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#"} &Eacute;ta&iacute;n
+      %a.navbar-brand{:href => "#{root_path}"} &Eacute;ta&iacute;n
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav{style: "padding-top:10px; margin-left:100px;"}
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Courses
+            =t 'activerecord.models.courses'
             %b.caret
           %ul.dropdown-menu
-            %li= link_to "Course Details", courses_path
+            %li= link_to (t 'courses.title'), courses_path
             %li= link_to "Scheduling", schedules_path
             %li= link_to "Bookings", bookings_path
             %li
