--- a/app/views/lecturers/index.html.haml
+++ b/app/views/lecturers/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Lecturers')
 - model_class = Lecturer
 .page-header
-  %h1 Lecturer
+  %h1=t 'lecturers.list'
 
 
 .navbar.navbar-inverse
@@ -15,21 +15,29 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th Name
-      %th Details
-      %th Rate
-      %th User
-      %th College
-      %th Data
+      %th=t 'lecturers.name'
+      %th=t 'lecturers.mykadno'
+      %th=t 'lecturers.rate'
+      %th=t 'lecturers.position'
+      /%th=t 'lecturers.address'
+      %th=t 'lecturers.qualifications'
+      /%th=t 'lecturers.experiences'
+      /%th User
+      /%th College
+      /%th Data
       %th
   %tbody
     - @lecturers.each do |lecturer|
       %tr
         %td= lecturer.name
-        %td= lecturer.details
+        %td= lecturer.mykadno
         %td= lecturer.rate
-        %td= lecturer.user_id
-        %td= lecturer.college_id
-        %td= lecturer.data
+        %td= lecturer.position
+        /%td= lecturer.address
+        %td= lecturer.qualifications
+        /%td= lecturer.experiences
+        /%td= lecturer.user_id
+        /%td= lecturer.college_id
+        /%td= lecturer.data
         = render :partial => 'action_menu', :locals => { :lecturer => lecturer }
 
