--- a/app/views/courses/_index_search.html.haml
+++ b/app/views/courses/_index_search.html.haml
@@ -1,12 +1,14 @@
 = search_form_for @search, url: courses_path, class: "form-inline" do |f|
   %tr.search_row{style: "display: none;"}
-    %td= f.text_field :code_cont, size: 2,  :class => "form-control"
+    %td= f.text_field :code_cont, :class => "form-control"
     %td= f.text_field :category_cont, :class => "form-control"
     %td= f.text_field :topic_cont,:class => "form-control"
-    %td= f.text_field :description_cont, :class => "form-control"
+    %td
+      .input-group
+        = f.text_field :description_cont, :class => "form-control"
+        %span.input-group-btn
+          %button.btn.btn-sm.btn-default.right{:type => "submit"}
+            %i.fa.fa-search.fa-fw
     %td &nbsp;
     %td &nbsp;
-    %td.input-group
-      %span.input-group-btn
-        %button.btn.btn-sm.btn-default.right{:type => "submit"}
-          %i.fa.fa-search.fa-fw
+    %td &nbsp;
