--- a/app/views/lecturers/show.html.haml
+++ b/app/views/lecturers/show.html.haml
@@ -13,7 +13,7 @@
 
 %dl.dl-horizontal
   %dt= t 'lecturers.rate'+":"
-  %dd= @lecturer.rate
+  %dd= "RM "+(sprintf("%.2f", @lecturer.rate)).to_s
 
 %dl.dl-horizontal
   %dt= t 'lecturers.position'+":"
