--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -1,40 +1,43 @@
 - provide(:title, 'schedules')
 - model_class = Schedule
 .page-header
-  %h1 Schedule
+  %h1=t 'schedules.list'
 
 .navbar.navbar-inverse
   .navbar-inner
     %ul.nav
       %li= link_to content_tag(:li, fa_icon(" ", text: (t 'actions.new'))), new_schedule_path
     %ul.nav.pull-right
-      %li= link_to content_tag(:li, fa_icon("search", text: (t 'actions.search'))), "#"
+      %li= link_to content_tag(:li, fa_icon("search", text: (t 'actions.search'))), "#", class: "index_search_bar"
 
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th Course
-      %th Scheduled On
-      %th Location
-      %th Lecturer By
-      %th Max People
-      %th Status
-      %th User
-      %th College
-      %th Data
+      %th{width: '25%'}=t 'schedules.course_id'
+      %th{width: '15%'}=t 'schedules.scheduled_on'
+      %th{width: '20%'}=t 'schedules.location_id'
+      %th{width: '20%'}=t 'schedules.lecturer_id'
+      %th{width: '10%'}=t 'schedules.max_people'
+      %th{width: '10%'} Status
+      /%th=t 'helpers.user_id'
+      /%th=t 'helpers.college_id'
+      /%th=t 'helpers.data'
       %th
   %tbody
+    = render "index_search"
     - @schedules.each do |schedule|
       %tr
-        %td= schedule.course_id 
-        %td= schedule.scheduled_on 
-        %td= schedule.location_id 
-        %td= schedule.lecturer_by 
+        %td= schedule.try(:schedulecourse).try(:topic)
+        %td
+          = schedule.try(:start_on).try(:strftime, '%d %b %Y')
+          = schedule.end_on.nil? ? "" : " - "+schedule.try(:end_on).try(:strftime, '%d %b %Y')
+        %td= schedule.try(:schedulelocation).try(:name)
+        %td= schedule.try(:schedulelecturer).try(:name)
         %td= schedule.max_people 
         %td= schedule.status 
-        %td= schedule.user_id 
-        %td= schedule.college_id 
-        %td= schedule.data 
+        /%td= schedule.user_id 
+        /%td= schedule.college_id 
+        /%td= schedule.data 
         = render :partial => 'action_menu', :locals => { :schedule => schedule }
 
 
