--- a/app/views/customers/_index_search.html.haml
+++ b/app/views/customers/_index_search.html.haml
@@ -4,11 +4,8 @@
     %td= f.text_field :name_cont, :class => "form-control"
     %td= f.text_field :email_cont,:class => "form-control"
     %td= f.text_field :phone_cont,:class => "form-control"
-    %td= f.text_field :corporate_eq, :class => "form-control"
+    %td= f.select :corporate_eq, [[(t 'actions.all_records'), '' ], [(t 'actions.yes'), true], [(t 'actions.no'), false]], :class => "selectpicker"
+    %td= f.select :company_id_eq, [[(t 'actions.all_records'), '']]+Company.all.pluck(:name, :id).compact, :class => "selectpicker"
     %td
-      .input-group
-        = f.select :company_id_eq, [['All records', '']]+Company.all.pluck(:name, :id).compact, :class => "selectpicker"
-        %span.input-group-btn
-          %button.btn.btn-sm.btn-default.right{:type => "submit"}
-            %i.fa.fa-search.fa-fw
-    %td &nbsp;
+      %button.btn.btn-sm.btn-default.right{:type => "submit"}
+        %i.fa.fa-search.fa-fw
