--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -22,7 +22,7 @@
 
 %dl.dl-horizontal
   %dt= t('customers.corporate')+":"
-  %dd= @customer.corporate
+  %dd= @customer.corporate? ? (t 'actions.yes') : (t 'actions.no')
 
 %dl.dl-horizontal
   %dt= t('customers.company_id')+":"
