--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, 'Company')
 - model_class = Company
 .page-header
-  %h1 Company
+  %h1=t 'companies.list'
 
 
 .navbar.navbar-inverse
@@ -9,32 +9,33 @@
     %ul.nav
       %li= link_to content_tag(:li, fa_icon(" ", text: (t 'actions.new'))), new_company_path
     %ul.nav.pull-right
-      %li= link_to content_tag(:li, fa_icon("search", text: (t 'actions.search'))), "#"
+      %li= link_to content_tag(:li, fa_icon("search", text: (t 'actions.search'))), "#", class: "index_search_bar"
 
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th Company Code
-      %th Name
-      %th Address
-      %th Phone
-      %th Email
-      %th Fax
-      %th User
-      %th College
-      %th Data
+      %th{width: "8%"}=t 'companies.company_code'
+      %th{width: "20%"}=t 'companies.name'
+      %th{width: "28%"}=t 'companies.address'
+      %th{width: "12%"}=t 'companies.phone'
+      %th{width: "12%"}=t 'companies.fax'
+      %th{width: "20%"}=t 'companies.email'
+      /%th User
+      /%th College
+      /%th Data
       %th
   %tbody
+    = render "index_search"
     - @companies.each do |company|
       %tr
         %td= company.company_code
         %td= company.name
         %td= company.address
         %td= company.phone
-        %td= company.email
         %td= company.fax
-        %td= company.user_id
-        %td= company.college_id
-        %td= company.data
+        %td= company.email
+        /%td= company.user_id
+        /%td= company.college_id
+        /%td= company.data
         = render :partial => 'action_menu', :locals => { :company => company }
 
